# records-aemet-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: daily.sh  weekly.sh
src/extremos/: aemet.py  backfill.py  backfill_historico.py  backup.py  config.py  daily.py  dataset_card.py  db.py  export.py  fetch.py  hfutil.py  ingest.py  logconf.py  parsing.py  provincias.py  provisional.py  publish.py  rankings.py  records.py  stats.py  webcsv.py
